--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,16 @@ videos/*
 *.pyc
 **/images/*
 **/media/*
-link
 branch/*
+
+
+
+link/.venv/*
+link/.vscode/*
+link/static/data/*
+link/static/models/*
+link/static/images/*
+link/static/videos/*
+link/*.pyc
+link/.draft.py
+link/*/.all.py
